# huffman_coding

./: .gitignore  Cargo.toml  README.md
examples/: code_file.rs  coding_str.rs
src/: bitbuffer.rs  lib.rs
