[package]
name = "simple_huffman"
version = "0.1.0"
edition = "2021"

license = "BSD-2-Clause"
keywords = ["huffman", "compression"]
description = "Dead simple Huffman encoding and decoding library"
homepage = "https://github.com/funnsam/huffman_coding"
documentation = "https://docs.rs/simple_huffman"
repository = "https://github.com/funnsam/huffman_coding"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
