[package]
name = "simple_huffman"
version = "0.1.3"
edition = "2021"

license = "BSD-2-Clause"
keywords = ["huffman", "compression"]
description = "Dead simple Huffman encoding and decoding library"
homepage = "https://github.com/funnsam/huffman_coding"
documentation = "https://docs.rs/simple_huffman"
repository = "https://github.com/funnsam/huffman_coding"
readme = "README.md"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[[example]]
name = "code_file"
required-features = ["serde"]

[dev-dependencies]
postcard = { version = "1.0", features = ["use-std"] }
